<resources>
    <string name="app_name">Vells</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="home_fragment">Home fragment</string>
    <string name="products_fragment">Products fragment</string>
    <string name="configuration_fragment">Configuration fragment</string>
    <string name="new_table">New Table</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vells">Vells</string>
    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="test">Test</string>
    <string name="tipo">Tipo:</string>
    <string name="v">V</string>
    <string name="nombre">Nombre:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="precio">Precio:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="opcion_1">Opcion 1</string>
    <string name="opcion_2">Opcion 2</string>
    <string name="opcion_3">Opcion 3</string>
    <string name="opcion_4">Opcion 4</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
</resources>