<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.products.view.NewProductFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25"/>

            <TextView
                android:id="@+id/tvNewProductType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_1"
                style="@style/recycler_items_title_text"
                android:textStyle="bold"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="@id/tvNewProductType21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="@id/tvNewProductType21"/>

            <TextView
                android:id="@+id/tvNewProductType21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:maxLines="1"
                style="@style/recycler_items_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/etNewProductName1"/>

            <TextView
                android:id="@+id/tvNewProductName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_2"
                android:textStyle="bold"
                android:layout_margin="8dp"
                style="@style/recycler_items_title_text"
                app:layout_constraintTop_toTopOf="@id/etNewProductName1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="@id/etNewProductName1"/>

            <EditText
                android:id="@+id/etNewProductName1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@style/recycler_items_text"
                app:layout_constraintTop_toBottomOf="@id/tvNewProductType21"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/etNewProductDescription1"/>

            <TextView
                android:id="@+id/tvNewProductDescription1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_3"
                android:textStyle="bold"
                android:layout_margin="8dp"
                style="@style/recycler_items_title_text"
                app:layout_constraintTop_toTopOf="@id/etNewProductDescription1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="@id/etNewProductDescription1"/>

            <EditText
                android:id="@+id/etNewProductDescription1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@style/recycler_items_text"
                app:layout_constraintTop_toBottomOf="@id/etNewProductName1"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/etNewProductPrice1"/>

            <TextView
                android:id="@+id/tvNewProductPrice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_4"
                android:textStyle="bold"
                android:layout_margin="8dp"
                style="@style/recycler_items_title_text"
                app:layout_constraintTop_toTopOf="@id/etNewProductPrice1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="@id/etNewProductPrice1"/>

            <EditText
                android:id="@+id/etNewProductPrice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="number"
                style="@style/recycler_items_text"
                app:layout_constraintTop_toBottomOf="@id/etNewProductDescription1"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnExit"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/guardar"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnExit"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/salir"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
